--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -3,48 +3,48 @@ html
  include common/_head
  body.body-welcome
    .parallax-wrapper
-    ul#scene.parallax_list
-     li.layer(data-depth="0.10")
+    ul#scene.parallax__list
+     li.layer(data-depth="0.1")
+      .layer0.layer-img
+     li.layer(data-depth="0.1")
       .layer1.layer-img
-     li.layer(data-depth="0.10")
+     li.layer(data-depth="0.2")
       .layer2.layer-img
-     li.layer(data-depth="0.10")
-      .sky_layer.layer-img
-     li.layer(data-depth="0.10")
+     li.layer(data-depth="0.3")
+      .layer3.layer-img
+     li.layer(data-depth="0.4")
       .layer4.layer-img
-     li.layer(data-depth="0.10")
+     li.layer(data-depth="0.5")
       .layer5.layer-img
-     li.layer(data-depth="0.10")
+     li.layer(data-depth="0.6")
       .layer6.layer-img
-     li.layer(data-depth="0.30")
+     li.layer(data-depth="0.7")
       .layer7.layer-img
-     li.layer(data-depth="0.10")
+     li.layer(data-depth="0.8")
       .layer8.layer-img
-     li.layer(data-depth="0.10")
-      .cloud2.layer-img
-     li.layer(data-depth="0.10")
-      .cloud.layer-img
+     li.layer(data-depth="0.9")
+      .layer9.layer-img
    //- .parallax
    //-   .layer
-   //-    img(src="../assets/img/Layer5.jpg")
+   //-    img(src="../assets/img/layer_0.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer8.jpg")
+   //-    img(src="../assets/img/layer_1.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer7.jpg")
+   //-    img(src="../assets/img/layer_2.png")
    //-   .layer
-   //-    img(src="../assets/img/cloud_PNG4.jpg")
+   //-    img(src="../assets/img/layer_3.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer6.jpg")
+   //-    img(src="../assets/img/layer_4.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer4.jpg")
+   //-    img(src="../assets/img/layer_5.png")
    //-   .layer
-   //-    img(src="../assets/img/sky.jpg")
+   //-    img(src="../assets/img/layer_6.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer2.jpg")
+   //-    img(src="../assets/img/layer_7.png")
    //-   .layer
-   //-    img(src="../assets/img/Layer1.jpg")
+   //-    img(src="../assets/img/layer_8.png")
    //-   .layer
-   //-    img(src="../assets/img/cloud_PNG5.png")   	
+   //-    img(src="../assets/img/layer_9.png")   	
   header.header__welcome
    .auth
     .button#auth Авторизоваться
