--- a/source/style/pages/about.scss
+++ b/source/style/pages/about.scss
@@ -24,7 +24,7 @@
 }
 
 #about_header {
-  opacity: 0.1;
+  opacity: .08;
 }
 
 svg #vk {
@@ -33,24 +33,50 @@ svg #vk {
   fill: #fff;
 }
 
+.about__logo_section {
+height: 160px;
+position: relative;
+text-align: center;
+}
+
+
 .about__header {
-  background: url(../img/about_header.svg)center no-repeat;
       top: -50px;
     left: 20px;
-    position: absolute;
+    position: relative;
     margin: 0;
-    background-size: 100% auto;
     text-align: center;
     font: 63px/200px 'BERNIERRegular-Regular', Helvetica, Arial;
     color: #373e42;
     width: 45%;
     height: 200px;
+    display: inline-block;
+    &:before,&:after {
+        content:'';
+        width: 22px;
+        height: 5px;
+        position: absolute;
+        top: 95px;
+        background: #c9c8c0;
+    }
+    &:before {
+      left: 50px;
+    }
+    &:after {
+      right: 50px;
+    }
+}
+
+.about__header_logo {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-47%, -67%);
+width: 100%;
+height: auto;
 }
 
 
-.about__span  {
-  position: relative;
-}
 
 .about__info_block {
       padding: 15px 25px 50px 50%;
@@ -290,6 +316,7 @@ position: relative;
   font: 500 1.14rem 'Roboto', Arial, sans-serif;
   color: #566358;
   border-radius: 5px;
+      box-shadow: 0px 0px 1px rgba(55, 62, 66, 0.62);
 }
 
 .contacts__heading {
@@ -351,12 +378,11 @@ position: relative;
 
 @media (min-width: 1200px) and (max-width: 1799px) {
   .about__header {
-    top: -101px;
-    left: 197px;
+    top: -25px;
   }
   .about__info_block {
     padding:0;
-    margin: 100px 0 0 0;
+  
   }
   .about__heading:before {
 left: 280px;
