--- a/source/style/pages/blog.scss
+++ b/source/style/pages/blog.scss
@@ -6,6 +6,14 @@
 	height: 200px;
 }
 
+.blog-container-fixed {
+	position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+
 .blog-container {
 	display: flex;
 	align-items: flex-start;
